--- a/indexprac.html
+++ b/indexprac.html
@@ -5,25 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica4</title>
+    <link rel="stylesheet" href="estilosAc4.css">
 
 </head>
 
-<body>
-
-    <header style="background-color:black;color: whitesmoke; font-size: 20px; text-align: center; border: 3px solid red;">
-        <h1>Encabezado Nivel uno</h1>
-        <nav>
-            <a href="">Enlace 1</a>
-            <a href="">Enlace 2</a>
-            <a href="">Enlace 3</a>
+<body style="background-color: rgba(127, 255, 212, 0.514);">
+    <header style="background-color:black;color: cadetblue; text-align: center;">
+        <h1>ENCABEZADO NIVEL 1</h1>
+        <nav style="background-color: cadetblue;">
+            <a href="">ENLACE 1</a>
+            <a href="">ENLACE 2</a>
+            <a href="">ENLACE 3</a>
+            <a href="">ENLACE 4</a>
         </nav>
     </header>
-    <main style="background-color:grey; color: aliceblue; font-size: 16px; text-align: center; border: 3px solid red;">
+    <main style="background-color:grey; color: aliceblue; font-size: 16px; text-align: center;">
         <h2>Encabezado Nivel 2 </h2>
         <p>Aqui va texto primer parrafo</p>
         <p>Aqui va texto segundo parrafo</p>
     </main>
-    <aside style="background-color: green; color: white; font-size: 15px; text-align: center; border: 3px solid red;">
+    <aside style="background-color: green; color: white; font-size: 15px; text-align: center;">
         <h2>Apartado</h2>
         <form>
             <input type="checkbox">
