--- a/ActividadECS.html
+++ b/ActividadECS.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="styleamo.css">
+  <link rel="stylesheet" href="Styles.css">
 </head>
 
 <body style="background-color: rgba(127, 255, 212, 0.726);">
@@ -16,21 +16,25 @@
       <a href="">ENLACE 2</a>
       <a href="">ENLACE 3</a>
       <a href="">ENLACE 4</a>
-    </nav> 
+    </nav>
   </header>
-  <div class="a2">
-    <main style="background-color:rgba(50, 143, 230, 0.685);text-align: center;height: auto; width: 80%; border:white solid 5px ;">
+  <div class="mainaside">
+    <main
+      style="background-color:rgba(50, 143, 230, 0.685);text-align: center; height: auto; width: 70%; border:white solid 5px ;">
       <h2>ENCABEZADO NIVEL 2</h2>
       <p>aqui va texto del primer parrafo</p>
       <p>aqui va texto del segundo parrafo</p>
     </main>
-    <aside style="background-color: rgba(203, 19, 209, 0.87);text-align:center;height:auto;width: 20%; border: white solid 5px;">
-      <b><h2>Apartado</h2></b>
-          <p>elije una opcion </p>
-            <ul><input type="checkbox">opcion 1</ul>
-            <ul><input type="checkbox">opcion 2</ul>
-            <ul><input type="checkbox">opcion 3</ul>
-            <button> enviar </button>     
+    <aside
+      style="background-color: rgba(203, 19, 209, 0.87);text-align: center; height: auto; width: 30%; border: white solid 5px;">
+      <b>
+        <h2>Apartado</h2>
+      </b>
+      <p>elije una opcion </p>
+      <ul><input type="checkbox">opcion 1</ul>
+      <ul><input type="checkbox">opcion 2</ul>
+      <ul><input type="checkbox">opcion 3</ul>
+      <button> enviar </button>
     </aside>
   </div>
   <footer style="background-color: rgb(241, 223, 18);height: 40px;text-align: center;">
