--- a/actividad5.html
+++ b/actividad5.html
@@ -10,10 +10,14 @@
     <header>
         <img src="logo.svg">
         <hr>
-        <nav>Residentes</nav>
-        <nav>Negocios</nav>
-        <nav>Visitantes</nav>
-        <nav>Gobierno</nav>
+        <div class="div">
+            <nav>
+                <a>Residentes</a>
+                <a>Negocios</a>
+                <a>Visitantes</a>
+                <a>Gobierno</a>
+            </nav>
+        </div>
     </header>
     <main>
         <section>
@@ -26,12 +30,14 @@
             </h1>
         </section>
         <section>
-            <h2>¿Quién se puede inscribir?</h2>
-            <p>Cualquier persona que quiera aprender a programar codigo y cuente con 4-8 horas disponibles a la semana.<br>
-            *Menores de edad deberan entrar a las instalaciones acompañados de un adulto.</p>
+            <div class="h2">
+                <h2 style="color: rgb(201, 169, 81);">¿Quién se puede inscribir?</h2>
+            </div>    
         </section>
     </main>
-
-    
+    <div class="p">
+        <p>Cualquier persona que quiera aprender a programar codigo y cuente con 4-8 horas disponibles a la semana</p>
+        <p>*Menores de edad deberan entrar a las instalaciones acompañados de un adulto.</p>
+    </div>
 </body>
 </html>
